# Template_Python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml
deploy/docker/: Dockerfile  docker-compose.yml
docs/: conf.py  index.rst  modules.rst  readme_link.md  tools.rst
scripts/: ml_template.ipynb  script.ipynb
src/tools/: logger.py  utils.py
tests/: .coveragerc  test_logger.py  test_utils.py
